# kafka

./: .gitignore  CHANGELOG.md  CNAME  IMPLEMENTATION.md  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.jsonc  wrangler.toml
.beads/: interactions.jsonl  issues.jsonl
docs.td/: admin.mdx  consumer.mdx  http-client.mdx  index.mdx  producer.mdx
sdks/clojure/: README.md
sdks/clojure/src/kafka_do/: client.clj  core.clj  producer.clj  types.clj
sdks/crystal/: README.md  shard.yml
sdks/crystal/spec/: kafka_spec.cr  spec_helper.cr
sdks/crystal/src/: kafka-do.cr
sdks/crystal/src/kafka-do/: admin.cr  client.cr  config.cr  consumer.cr  (+4 more)
sdks/dart/: README.md  pubspec.yaml
sdks/dart/lib/: kafka_do.dart
sdks/dart/test/: kafka_do_test.dart
sdks/dotnet/: Kafka.Do.csproj  README.md
sdks/dotnet/src/: Admin.cs  Consumer.cs  Kafka.cs  Message.cs  Producer.cs
sdks/dotnet/tests/: Kafka.Do.Tests.csproj  KafkaTests.cs
sdks/elixir/: README.md
sdks/fsharp/: README.md
sdks/go/: README.md  admin.go  admin_test.go  consumer.go  consumer_test.go  errors.go  errors_test.go  go.mod  kafka.go  kafka_test.go  producer.go  producer_test.go
sdks/java/: README.md  build.gradle.kts  settings.gradle.kts
sdks/kotlin/: README.md
sdks/nim/: README.md  kafka_do.nimble
sdks/nim/src/: kafka_do.nim
sdks/nim/tests/: test_kafka_do.nim
sdks/php/: README.md  composer.json
sdks/php/src/: Consumer.php  Kafka.php  MockRpcTransport.php  Producer.php  RpcTransport.php
sdks/python/: README.md  pyproject.toml
sdks/python/src/kafka_do/: __init__.py  admin.py  consumer.py  kafka.py  producer.py  types.py
sdks/python/tests/: __init__.py  conftest.py  test_admin.py  test_consumer.py  test_kafka.py  test_producer.py
sdks/ruby/: README.md  kafka.do.gemspec
sdks/ruby/lib/: kafka_do.rb
sdks/ruby/spec/: admin_spec.rb  consumer_spec.rb  kafka_spec.rb  message_spec.rb  producer_spec.rb  spec_helper.rb  stream_spec.rb  testing_spec.rb
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: admin.rs  consumer.rs  error.rs  kafka.rs  lib.rs  producer.rs
sdks/rust/tests/: consumer_test.rs  producer_test.rs
sdks/scala/: README.md  build.sbt
sdks/swift/: Package.swift  README.md
sdks/swift/.build/: build.db  debug.yaml
sdks/typescript/: package-lock.json  package.json  vitest.config.ts
sdks/typescript/src/: admin.ts  consumer.ts  index.ts  kafka.ts  producer.ts  types.ts
sdks/typescript/tests/: admin.test.ts  consumer.test.ts  index.test.ts  kafka.test.ts  producer.test.ts  types.test.ts
src/: cloudflare-test.d.ts  errors.ts  index.test.ts  index.ts  test-utils.ts  utils.ts
src/api/: admin.ts  consumer.ts  index.ts  producer.ts
src/client/: admin.ts  client.ts  consumer.ts  index.ts  producer.ts
src/completeness/: retention.test.ts
src/durable-objects/: cluster-metadata.ts  consumer-group.ts  topic-partition.test.ts  topic-partition.ts
src/integrations/: index.ts  mondodb-cdc.ts  mongodb-cdc.ts  r2-event-bridge.ts
src/retention/: index.ts  retention.test.ts  types.ts
src/schema/: schema.test.ts  schema.ts
src/types/: admin.test.ts  admin.ts  consumer.test.ts  consumer.ts  index.ts  producer.test.ts  producer.ts  records.test.ts  records.ts
(+276 files in other folders)
