[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kafka-do"
version = "0.1.0"
description = "Kafka-DO - Kafka client SDK for .do services with kafka-python compatible API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "DotDo", email = "sdk@dotdo.dev" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
keywords = ["kafka", "messaging", "dotdo", "async", "streaming"]
dependencies = [
    "rpc-do>=0.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]
dev = [
    "kafka-do[test]",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
]

[project.urls]
Homepage = "https://dotdo.dev"
Documentation = "https://dotdo.dev/docs/python/kafka"
Repository = "https://github.com/dotdo-dev/kafka-do-python"

[tool.hatch.build.targets.wheel]
packages = ["src/kafka_do"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/kafka_do"]
branch = false

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "from rpc_do import connect",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
strict = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
