[package]
name = "kafka-do"
version = "0.1.0"
edition = "2021"
description = "Kafka-DO SDK - Managed Kafka client with rdkafka-compatible API for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dotdo-ai/capnweb"
keywords = ["kafka", "messaging", "async", "streaming"]
categories = ["network-programming", "asynchronous"]

[lib]
name = "kafka_do"
path = "src/lib.rs"

[features]
default = ["tokio-runtime"]
tokio-runtime = []

[dependencies]
# RPC transport
rpc-do = { path = "../../../../packages/rust/rpc" }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"

# Async streams
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "test-util"] }
pretty_assertions = "1"

[[test]]
name = "producer_test"
path = "tests/producer_test.rs"

[[test]]
name = "consumer_test"
path = "tests/consumer_test.rs"
